hard code scrollbar width instead of detecting scrollbar width (simpler, less buggy)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/lynx/insights/_lynx-insights.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/lynx/insights/_lynx-insights.scss
@@ -15,6 +15,7 @@
   --lynx-insights-error-text-decoration: wavy underline;
 
   --lynx-insights-status-indicator-bg-color: #fff;
+  --lynx-insights-status-indicator-offset: 19px;
 }
 
 $insightTypes: 'info', 'warning', 'error';
